--- a/talk-loco-commands-derive/Cargo.toml
+++ b/talk-loco-commands-derive/Cargo.toml
@@ -13,3 +13,5 @@ proc-macro = true
 [dependencies]
 syn = "1.0"
 quote = "1.0"
+bson = "1.1.0"
+loco-protocol = { git = "https://github.com/djdisodo/loco-protocol-rs" }
