--- a/talk-loco-commands/Cargo.toml
+++ b/talk-loco-commands/Cargo.toml
@@ -12,6 +12,6 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bson = "1.1.0"
-loco-protocol = "1.0.0"
-talk-loco-commands-derive = { version = "0.1.0", path = "../talk-loco-commands-derive" }
-openssl = "0.10.30"
+loco-protocol = { git = "https://github.com/djdisodo/loco-protocol-rs" }
+loco-protocol-derive = { git = "https://github.com/djdisodo/loco-protocol-rs" }
+talk-loco-commands-derive = { path = "../talk-loco-commands-derive" }
